Tests/a2/accept/2.ul
void main(){
	int x;
}

int aa(int x){

}