Tests/a2/reject/1.ul
void main(){
	int[5] x;
	x = aa(x[1]);
}

int[3] aa(int x){

}